[gd_scene load_steps=3 format=3 uid="uid://bqc6dcfujrdxk"]

[ext_resource type="Script" uid="uid://bsl3fpqv8nfvq" path="res://Scripts/settings.gd" id="1_i44u3"]
[ext_resource type="FontFile" uid="uid://b5drm16qrbhna" path="res://Fonts/Xolonium-Regular.ttf" id="2_lhmql"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_i44u3")

[node name="SettingsBackground" type="ColorRect" parent="." groups=["hud_settings"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 45.0
offset_right = -50.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.279706, 0.402969, 0.45521, 1)

[node name="MasterVolumeLabel" type="Label" parent="."]
offset_left = 148.0
offset_top = 201.0
offset_right = 417.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("2_lhmql")
theme_override_font_sizes/font_size = 64
text = "Master Volume:"

[node name="MusicCheckLabel" type="Label" parent="."]
offset_left = 152.0
offset_top = 380.0
offset_right = 462.0
offset_bottom = 458.0
theme_override_fonts/font = ExtResource("2_lhmql")
theme_override_font_sizes/font_size = 64
text = "Mute Music:"

[node name="DeathSoundLabel" type="Label" parent="."]
offset_left = 156.0
offset_top = 559.0
offset_right = 615.0
offset_bottom = 637.0
theme_override_fonts/font = ExtResource("2_lhmql")
theme_override_font_sizes/font_size = 64
text = "Mute Death Sound:"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
offset_left = 722.0
offset_top = 166.0
offset_right = 1788.0
offset_bottom = 324.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="MusicCheckbox" type="CheckBox" parent="."]
offset_left = 1344.0
offset_top = 351.0
offset_right = 1368.0
offset_bottom = 385.0
scale = Vector2(11.52, 4.24)
theme_override_font_sizes/font_size = 32
alignment = 1
icon_alignment = 1

[node name="DeathSoundCheckbox" type="CheckBox" parent="."]
offset_left = 1345.0
offset_top = 513.0
offset_right = 1369.0
offset_bottom = 553.0
scale = Vector2(11.88, 4.19949)

[node name="ExitButton" type="Button" parent="."]
offset_left = 63.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 157.0
theme_override_fonts/font = ExtResource("2_lhmql")
theme_override_font_sizes/font_size = 64
text = "X
"

[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="toggled" from="MusicCheckbox" to="." method="_on_music_checkbox_toggled"]
[connection signal="toggled" from="DeathSoundCheckbox" to="." method="_on_death_sound_checkbox_toggled"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
